# ai-nation-hackathon-bounty-marketplace

./: .env.example  .gitignore  BUSINESS.md  Dockerfile  README.md  middleware.ts  next.config.mjs  nixpacks.toml  package-lock.json  package.json  railway.json  tailwind.config.ts  tsconfig.json
agents/: balanced_bidder.py  ensemble_bidder.py  fast_bidder.py  pyproject.toml  quality_bidder.py  run_all.sh
agents/shared/: lightning_client.py  llm_client.py  marketplace_client.py  tavily_client.py
app/: globals.css  layout.tsx  page.tsx
cli/: package-lock.json  package.json  tsconfig.json
components/: AuditTrailRow.tsx  AuditorPanel.tsx  AuthGuard.tsx  BidRow.tsx  BountyCard.tsx  BugBountyTargetView.tsx  CodeBlock.tsx  CodebaseContextView.tsx  Countdown.tsx  DiffViewer.tsx  EnsembleBidRow.tsx  EvaluationModePicker.tsx  IssuePicker.tsx  IssueRow.tsx  LightningInvoiceModal.tsx  LiveStats.tsx  MarkdownPreview.tsx  RepoCard.tsx  RepoConnectedBanner.tsx  RepoPicker.tsx  ScanCandidateCard.tsx  StatusBadge.tsx  TaskTypeBadge.tsx  TemplateButtons.tsx  UserMenu.tsx  WalletRow.tsx  WinnerCodeViewer.tsx
demo-codebases/: boaharis-lightning-bounty-demo
docs/: DEMO_RUNBOOK.md  DEPLOYMENT.md  GITHUB_INTEGRATION.md  HOSTING.md  LESSONS_LEARNED.md  OPERATOR_CHECKLIST.md  SETUP_REAL_MODE.md  V2_AUTONOMOUS_ESCROW.md
lib/: auditor.ts  auth.ts  db.ts  db_postgres.ts  db_sqlite.ts  github.ts  hash.ts  jobs.ts  lightning.ts  preview.ts  sandbox.ts  scan_candidates.ts  scanner.ts  schema.sql  supabase-browser.ts  supabase.ts  types.ts
mcp-server/: README.md  package-lock.json  (+2 more)
(+166 files in other folders)
